static/css/action-dropdown.css
.action-dropdown button {
  color: #fff;
  background-color: #337ab7;
  background-image: none;
  border-color: #2e6da4;
  padding: 1px 5px 1px 10px;
  font-size: 12px;
  line-height: 1.5;
  border-radius: 3px;
}

.action-dropdown .btn-group .btn-primary.dropdown-toggle:hover,
.action-dropdown .btn-group.open .btn-primary.dropdown-toggle,
.action-dropdown .btn-group.open .btn-primary.dropdown-toggle:hover,
.action-dropdown .btn-group.open .btn-primary.dropdown-toggle:active
 {
  background-color: #286090;
  border-color: #204d74;
}

.action-dropdown .btn-group .btn-primary.dropdown-toggle:focus
{
  background-color: #286090;
  border-color: #122b40;
  outline: none;
}

.action-dropdown button > i {
  margin: 0 5px;
}

.action-dropdown ul.dropdown-menu {
  text-align: center;
  left: 50%;
  transform: translate(-50%, 0);
}

.action-dropdown .end-of-group {
  padding-bottom: 5px;
  margin-bottom: 5px;
  border-bottom: 1px dotted #777;
}

.action-dropdown .dropdown-header {
  display: block;
  padding: 3px 20px;
  font-size: 12px;
  line-height: 1.42857143;
  color: #777;
  white-space: nowrap;
}

.action-dropdown .tooltip-inner {
  padding: 8px;
  line-height: 18px;
  -webkit-font-smoothing: subpixel-antialiased;
}

.action-dropdown li.divider {
    background-color: #777;
}
  
.action-dropdown li.divider:last-child {
  background-color: transparent;
  margin: 0;
}

